Messages on run

--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas  as pd\n",
-    "from bio_embeddings.embed import prottrans_t5_embedder"
+    "print('03_embed start running')"
    ]
   },
   {
@@ -17,7 +15,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedder = prottrans_t5_embedder.ProtTransT5XLU50Embedder(device='cuda:0')"
+    "import os\n",
+    "import pandas  as pd\n",
+    "from bio_embeddings.embed import prottrans_t5_embedder\n",
+    "\n",
+    "print('Imported packages')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedder = prottrans_t5_embedder.ProtTransT5XLU50Embedder(device='cuda:0')\n",
+    "\n",
+    "print('Defined embedder')"
    ]
   },
   {
@@ -35,7 +48,9 @@
    "source": [
     "# Load 2_model_df.pkl\n",
     "INPUT_PATH = os.path.join('..', 'data', 'interim')\n",
-    "protein_pairs = pd.read_pickle(os.path.join(INPUT_PATH, '2_model_df.pkl'))"
+    "protein_pairs = pd.read_pickle(os.path.join(INPUT_PATH, '2_model_df.pkl'))\n",
+    "\n",
+    "print('Loaded 2_model_df.pkl')"
    ]
   },
   {
@@ -65,7 +80,9 @@
    "source": [
     "# Add embeddings to protein_pairs\n",
     "protein_pairs['seqID_phage_embed'] = protein_pairs['seqID_phage'].astype(str).apply(embed_protein)\n",
-    "protein_pairs['seqID_bacteria_embed'] = protein_pairs['seqID_bacteria'].astype(str).apply(embed_protein)"
+    "protein_pairs['seqID_bacteria_embed'] = protein_pairs['seqID_bacteria'].astype(str).apply(embed_protein)\n",
+    "\n",
+    "print('Added embeddings to protein_pairs')"
    ]
   },
   {
@@ -83,7 +100,9 @@
    "source": [
     "# Save 3_model_df.pkl\n",
     "OUT_PATH = os.path.join('..', 'data', 'interim')\n",
-    "protein_pairs.to_pickle(os.path.join(OUT_PATH, '3_model_df.pkl'))"
+    "protein_pairs.to_pickle(os.path.join(OUT_PATH, '3_embeddings.pkl'))\n",
+    "\n",
+    "print('Saved 3_embeddings.pkl')"
    ]
   },
   {
@@ -95,6 +114,15 @@
     "# create a txt test file \n",
     "with open(\"3_test.txt\", \"w\") as f:\n",
     "    f.write(\"03_embed finished successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('03_embed finished successfully!')"
    ]
   }
  ],
