--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "import os\n",
     "import pandas  as pd\n",
+    "import torch\n",
     "from bio_embeddings.embed import prottrans_t5_embedder\n",
     "\n",
     "print('Imported packages')"
