--- a/notebooks/03_embed.ipynb
+++ b/notebooks/03_embed.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedder = prottrans_t5_embedder.ProtTransT5XLU50Embedder(device='cuda:0')\n",
+    "embedder = prottrans_t5_embedder.ProtTransT5XLU50Embedder(device='cuda')\n",
     "\n",
     "print('Defined embedder')"
    ]
