new embed + 1and2test

--- a/notebooks/02_transform_data.ipynb
+++ b/notebooks/02_transform_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4296,7 +4296,8 @@
     "    os.makedirs(OUT_PATH)\n",
     "\n",
     "# Save model_df as pickle\n",
-    "model_df.to_pickle(os.path.join(OUT_PATH, '2_model_df.pkl'))"
+    "model_df.to_pickle(os.path.join(OUT_PATH, '2_model_df.pkl'))\n",
+    "model_df.to_pickle(os.path.join(OUT_PATH, '2_model_df_test.pkl'))"
    ]
   }
  ],
