--- a/notebooks/02_transform_data.ipynb
+++ b/notebooks/02_transform_data.ipynb
@@ -4296,8 +4296,7 @@
     "    os.makedirs(OUT_PATH)\n",
     "\n",
     "# Save model_df as pickle\n",
-    "model_df.to_pickle(os.path.join(OUT_PATH, '2_model_df.pkl'))\n",
-    "model_df.to_pickle(os.path.join(OUT_PATH, '2_model_df_test.pkl'))"
+    "model_df.to_pickle(os.path.join(OUT_PATH, '2_model_df.pkl'))"
    ]
   }
  ],
