First test 03 new

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -10,6 +10,74 @@
     "import torch\n",
     "import re"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('torch.cuda.is_available() ' + torch.cuda.is_available())\n",
+    "\n",
+    "device = torch.device('cuda:0')\n",
+    "\n",
+    "# Load the tokenizer\n",
+    "tokenizer = T5Tokenizer.from_pretrained('Rostlab/prot_t5_xl_half_uniref50-enc', do_lower_case=False)\n",
+    "\n",
+    "# Load the model\n",
+    "model = T5EncoderModel.from_pretrained(\"Rostlab/prot_t5_xl_half_uniref50-enc\").to(device)\n",
+    "\n",
+    "# only GPUs support half-precision currently; if you want to run on CPU use full-precision (not recommended, much slower)\n",
+    "model.full() if device=='cpu' else model.half()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load 2_model_df.pkl\n",
+    "INPUT_PATH = os.path.join('..', 'data', 'interim')\n",
+    "protein_pairs = pd.read_pickle(os.path.join(INPUT_PATH, '2_model_df.pkl'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Embed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get sequence list\n",
+    "sequence_examples = protein_pairs['seqID_phage'].tolist()\n",
+    "\n",
+    "# Replace all rare/ambiguous amino acids by X and introduce white-space between all amino acids\n",
+    "sequence_examples = [\" \".join(list(re.sub(r\"[UZOB]\", \"X\", sequence))) for sequence in sequence_examples]\n",
+    "\n",
+    "# tokenize sequences and pad up to the longest sequence in the batch\n",
+    "ids = tokenizer(sequence_examples, add_special_tokens=True, padding=\"longest\")\n",
+    "\n",
+    "input_ids = torch.tensor(ids['input_ids']).to(device)\n",
+    "attention_mask = torch.tensor(ids['attention_mask']).to(device)\n",
+    "\n",
+    "# generate embeddings\n",
+    "with torch.no_grad():\n",
+    "    embedding_repr = model(input_ids=input_ids, attention_mask=attention_mask)"
+   ]
   }
  ],
  "metadata": {
