--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('torch.cuda.is_available() ' + torch.cuda.is_available())\n",
+    "print('torch.cuda.is_available() ' + str(torch.cuda.is_available()))\n",
     "\n",
     "device = torch.device('cuda:0')\n",
     "\n",
