--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "from transformers import T5Tokenizer, T5EncoderModel\n",
     "import torch\n",
-    "import re"
+    "import re\n",
+    "import os "
    ]
   },
   {
