--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -9,7 +9,8 @@
     "from transformers import T5Tokenizer, T5EncoderModel\n",
     "import torch\n",
     "import re\n",
-    "import os "
+    "import os \n",
+    "import pd"
    ]
   },
   {
