--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -80,6 +80,17 @@
     "with torch.no_grad():\n",
     "    embedding_repr = model(input_ids=input_ids, attention_mask=attention_mask)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a txt test file \n",
+    "with open(\"3_MEGA_TEST.txt\", \"w\") as f:\n",
+    "    f.write(\"03_embed finished successfully!\")"
+   ]
   }
  ],
  "metadata": {
