Save embeddings and id

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -87,6 +87,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save embeddings\n",
+    "OUTPUT_PATH = os.path.join('..', 'data', 'interim')\n",
+    "torch.save(embedding_repr, os.path.join(OUTPUT_PATH, '3_embeddings.pt'))\n",
+    "\n",
+    "# Save ids as csv\n",
+    "ids_df = pd.DataFrame(ids)\n",
+    "ids_df.to_csv(os.path.join(OUTPUT_PATH, '3_ids.csv'), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# create a txt test file \n",
     "with open(\"3_MEGA_TEST.txt\", \"w\") as f:\n",
     "    f.write(\"03_embed finished successfully!\")"
