Just a couple of seq for testing

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -67,6 +67,10 @@
     "# Get sequence list\n",
     "sequence_examples = protein_pairs['seqID_phage'].tolist()\n",
     "\n",
+    "# TODO: Remove this line\n",
+    "# Take just a couple of sequences for testing\n",
+    "sequence_examples = sequence_examples[:2]\n",
+    "\n",
     "# Replace all rare/ambiguous amino acids by X and introduce white-space between all amino acids\n",
     "sequence_examples = [\" \".join(list(re.sub(r\"[UZOB]\", \"X\", sequence))) for sequence in sequence_examples]\n",
     "\n",
