write embeddings to text

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -112,6 +112,7 @@
    "source": [
     "# create a txt test file \n",
     "with open(\"3_MEGA_TEST.txt\", \"w\") as f:\n",
+    "    f.write(embedding_repr)\n",
     "    f.write(\"03_embed finished successfully!\")"
    ]
   }
