Remove csv embeddings

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -97,11 +97,7 @@
     "\n",
     "# Save ids as csv\n",
     "ids_df = pd.DataFrame(ids)\n",
-    "ids_df.to_csv(os.path.join(OUTPUT_PATH, '3_ids.csv'), index=False)\n",
-    "\n",
-    "# Save embedding_repr as csv\n",
-    "embedding_repr_df = pd.DataFrame(embedding_repr)\n",
-    "embedding_repr_df.to_csv(os.path.join(OUTPUT_PATH, '3_embedding_repr.csv'), index=False)"
+    "ids_df.to_csv(os.path.join(OUTPUT_PATH, '3_ids.csv'), index=False)"
    ]
   },
   {
