Print embedding representations to file

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -91,13 +91,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract residue embeddings\n",
+    "emb_0 = embedding_repr.last_hidden_state[0, :]\n",
+    "emb_1 = embedding_repr.last_hidden_state[1, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save embeddings\n",
     "OUTPUT_PATH = os.path.join('..', 'data', 'interim')\n",
-    "torch.save(embedding_repr, os.path.join(OUTPUT_PATH, '3_embeddings.pt'))\n",
-    "\n",
-    "# Save ids as csv\n",
-    "ids_df = pd.DataFrame(ids)\n",
-    "ids_df.to_csv(os.path.join(OUTPUT_PATH, '3_ids.csv'), index=False)"
+    "torch.save(embedding_repr, os.path.join(OUTPUT_PATH, '3_embeddings.pt'))"
    ]
   },
   {
@@ -108,7 +115,12 @@
    "source": [
     "# create a txt test file \n",
     "with open(\"3_MEGA_TEST.txt\", \"w\") as f:\n",
-    "    f.write(embedding_repr)\n",
+    "    f.write('emb_0\\n')\n",
+    "    f.write(str(emb_0))\n",
+    "    f.write('\\n\\n')\n",
+    "    f.write('emb_1\\n')\n",
+    "    f.write(str(emb_1))\n",
+    "    \n",
     "    f.write(\"03_embed finished successfully!\")"
    ]
   }
