Write tensor size to text

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -116,9 +116,11 @@
     "# create a txt test file \n",
     "with open(\"3_MEGA_TEST.txt\", \"w\") as f:\n",
     "    f.write('emb_0\\n')\n",
+    "    f.write('size: ' + str(emb_0.size()) + '\\n')\n",
     "    f.write(str(emb_0))\n",
     "    f.write('\\n\\n')\n",
     "    f.write('emb_1\\n')\n",
+    "    f.write('size: ' + str(emb_1.size()) + '\\n')\n",
     "    f.write(str(emb_1))\n",
     "    \n",
     "    f.write(\"03_embed finished successfully!\")"
