Embedding per protein

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -92,8 +92,12 @@
    "outputs": [],
    "source": [
     "# Extract residue embeddings\n",
-    "emb_0 = embedding_repr.last_hidden_state[0, :]\n",
-    "emb_1 = embedding_repr.last_hidden_state[1, :]"
+    "emb_0 = embedding_repr.last_hidden_state[0, :] # shape (9, 1024)\n",
+    "emb_1 = embedding_repr.last_hidden_state[1, :] # shape (9, 1024)\n",
+    "\n",
+    "# if you want to derive a single representation (per-protein embedding) for the whole protein\n",
+    "emb_0_per_protein = emb_0.mean(dim=0) # shape (1024)\n",
+    "emb_1_per_protein = emb_1.mean(dim=0) # shape (1024)"
    ]
   },
   {
