Check embeddings using seq len

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -69,16 +69,21 @@
     "\n",
     "# TODO: Remove this line\n",
     "# Take just a couple of sequences for testing\n",
-    "sequence_examples = sequence_examples[:4]\n",
+    "n_sequences = 4\n",
+    "sequence_examples = sequence_examples[:n_sequences]\n",
+    "\n",
+    "# Store sequence lengths\n",
+    "sequence_lengths = [len(seq) for seq in sequence_examples]\n",
     "\n",
     "# Replace all rare/ambiguous amino acids by X and introduce white-space between all amino acids\n",
     "sequence_examples = [\" \".join(list(re.sub(r\"[UZOB]\", \"X\", sequence))) for sequence in sequence_examples]\n",
     "\n",
     "# tokenize sequences and pad up to the longest sequence in the batch\n",
+    "# You can add max_length parameter to limit the length of the sequence\n",
     "ids = tokenizer(sequence_examples, add_special_tokens=True, padding=\"longest\")\n",
     "\n",
-    "input_ids = torch.tensor(ids['input_ids']).to(device)\n",
-    "attention_mask = torch.tensor(ids['attention_mask']).to(device)\n",
+    "input_ids = torch.tensor(ids['input_ids']).to(device)   # sequence\n",
+    "attention_mask = torch.tensor(ids['attention_mask']).to(device)  # mask to avoid attention on padding tokens\n",
     "\n",
     "# generate embeddings\n",
     "with torch.no_grad():\n",
@@ -92,12 +97,16 @@
    "outputs": [],
    "source": [
     "# Extract residue embeddings\n",
-    "emb_0 = embedding_repr.last_hidden_state[0, :] # shape (9, 1024)\n",
-    "emb_1 = embedding_repr.last_hidden_state[1, :] # shape (9, 1024)\n",
+    "# shape (batch_size, sequence_length, 1024)\n",
+    "emb = dict()\n",
+    "for i in range(n_sequences):\n",
+    "    emb[i] = embedding_repr.last_hidden_state[i, 1:sequence_lengths[i]+1, :]\n",
     "\n",
     "# if you want to derive a single representation (per-protein embedding) for the whole protein\n",
-    "emb_0_per_protein = emb_0.mean(dim=0) # shape (1024)\n",
-    "emb_1_per_protein = emb_1.mean(dim=0) # shape (1024)"
+    "# you can average over the sequence length dimension\n",
+    "emb_avg = dict()\n",
+    "for i in range(n_sequences):\n",
+    "    emb_avg[i] = torch.mean(emb[i], dim=0)"
    ]
   },
   {
@@ -117,15 +126,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a txt test file \n",
+    "# create a txt file with the embeddings and their lengths\n",
     "with open(\"3_MEGA_TEST.txt\", \"w\") as f:\n",
-    "    f.write('emb_0\\n')\n",
-    "    f.write('size: ' + str(emb_0.size()) + '\\n')\n",
-    "    f.write(str(emb_0))\n",
-    "    f.write('\\n\\n')\n",
-    "    f.write('emb_1\\n')\n",
-    "    f.write('size: ' + str(emb_1.size()) + '\\n')\n",
-    "    f.write(str(emb_1))\n",
+    "    for i in range(n_sequences):\n",
+    "        f.write(str(emb_avg[i].cpu().numpy()) + '\\n')\n",
+    "        f.write(str(len(emb_avg[i].cpu().numpy())) + '\\n')\n",
     "    \n",
     "    f.write(\"03_embed finished successfully!\")"
    ]
