Correct from emb_avg to emb

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -129,8 +129,8 @@
     "# create a txt file with the embeddings and their lengths\n",
     "with open(\"3_MEGA_TEST.txt\", \"w\") as f:\n",
     "    for i in range(n_sequences):\n",
-    "        f.write(str(emb_avg[i].cpu().numpy()) + '\\n')\n",
-    "        f.write(str(len(emb_avg[i].cpu().numpy())) + '\\n')\n",
+    "        f.write(str(emb[i].cpu().numpy()) + '\\n')\n",
+    "        f.write(str(len(emb[i].cpu().numpy())) + '\\n')\n",
     "    \n",
     "    f.write(\"03_embed finished successfully!\")"
    ]
