--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -126,12 +126,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a txt file with the embeddings and their lengths\n",
+    "# create a txt file with the embeddings and their shapes\n",
     "with open(\"3_MEGA_TEST.txt\", \"w\") as f:\n",
     "    for i in range(n_sequences):\n",
     "        f.write(str(emb[i].cpu().numpy()) + '\\n')\n",
-    "        f.write(str(len(emb[i].cpu().numpy())) + '\\n')\n",
-    "    \n",
+    "        f.write(str(emb[i].shape) + '\\n')\n",
     "    f.write(\"03_embed finished successfully!\")"
    ]
   }
