Change original seq len

--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -100,7 +100,7 @@
     "# shape (batch_size, sequence_length, 1024)\n",
     "emb = dict()\n",
     "for i in range(n_sequences):\n",
-    "    emb[i] = embedding_repr.last_hidden_state[i, 1:sequence_lengths[i]+1, :]\n",
+    "    emb[i] = embedding_repr.last_hidden_state[i, 1:sequence_lengths[i]+1]\n",
     "\n",
     "# if you want to derive a single representation (per-protein embedding) for the whole protein\n",
     "# you can average over the sequence length dimension\n",
@@ -131,6 +131,7 @@
     "    for i in range(n_sequences):\n",
     "        f.write(str(emb[i].cpu().numpy()) + '\\n')\n",
     "        f.write(str(emb[i].shape) + '\\n')\n",
+    "        f.write('seq_len: ' + str(sequence_lengths[i]) + '\\n')\n",
     "    f.write(\"03_embed finished successfully!\")"
    ]
   }
