--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -129,6 +129,7 @@
     "# create a txt file with the embeddings and their shapes\n",
     "with open(\"3_MEGA_TEST.txt\", \"w\") as f:\n",
     "    for i in range(n_sequences):\n",
+    "        f.write('sequence_examples: ' + str(sequence_examples[i]) + '\\n')\n",
     "        f.write(str(emb[i].cpu().numpy()) + '\\n')\n",
     "        f.write(str(emb[i].shape) + '\\n')\n",
     "        f.write('seq_len: ' + str(sequence_lengths[i]) + '\\n')\n",
