--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Get sequence list\n",
-    "sequence_examples = protein_pairs['seqID_phage'].tolist()\n",
+    "sequence_examples = protein_pairs['sequence_phage'].tolist()\n",
     "\n",
     "# TODO: Remove this line\n",
     "# Take just a couple of sequences for testing\n",
