--- a/notebooks/03_embed_new.ipynb
+++ b/notebooks/03_embed_new.ipynb
@@ -134,8 +134,8 @@
     "        f.write(str(emb[i].shape) + '\\n')\n",
     "        f.write('seq_len: ' + str(sequence_lengths[i]) + '\\n')\n",
     "        # Check embedding_repr.last_hidden_state and its shape\n",
-    "        f.write(str(embedding_repr.last_hidden_state[i].cpu().numpy()) + '\\n')\n",
-    "        f.write(str(embedding_repr.last_hidden_state[i].shape) + '\\n')\n",
+    "    f.write(str(embedding_repr.last_hidden_state.cpu().numpy()) + '\\n')\n",
+    "    f.write(str(embedding_repr.last_hidden_state.shape) + '\\n')\n",
     "    f.write(\"03_embed finished successfully!\")"
    ]
   }
