--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import pandas as pd\n",
     "\n",
     "# Import user defined libraries\n",
     "import sys\n",
