embed_proteins -> embed_pairs

--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "predictor = PairingPredictor(protein_pairs)\n",
-    "predictor.embed_proteins()\n",
+    "predictor.embed_pairs()\n",
     "\n",
     "LOG_PATH = '03_classify.log'\n",
     "predictor.save_log()"
