--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -50,7 +50,7 @@
     "predictor.embed_pairs()\n",
     "\n",
     "LOG_PATH = '03_classify.log'\n",
-    "predictor.save_log()"
+    "predictor.save_log(LOG_PATH)"
    ]
   }
  ],
