--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -48,6 +48,7 @@
    "source": [
     "predictor = PairingPredictor(protein_pairs)\n",
     "predictor.embed_pairs()\n",
+    "predictor.concatenate_embeddings()\n",
     "\n",
     "LOG_PATH = '03_classify.log'\n",
     "predictor.save_log(LOG_PATH)"
