--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -46,8 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor = PairingPredictor(protein_pairs)\n",
-    "predictor.embed_pairs()\n",
+    "DEBUG = True\n",
+    "\n",
+    "predictor = PairingPredictor(protein_pairs, DEBUG)\n",
+    "predictor.embed_pairs(DEBUG)\n",
     "predictor.concatenate_embeddings()\n",
     "\n",
     "LOG_PATH = '03_classify.log'\n",
