--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -49,11 +49,11 @@
     "DEBUG = True\n",
     "\n",
     "predictor = PairingPredictor(protein_pairs, DEBUG)\n",
-    "predictor.embed_pairs(DEBUG)\n",
-    "predictor.concatenate_embeddings()\n",
+    "# predictor.embed_pairs(DEBUG)\n",
+    "# predictor.concatenate_embeddings()\n",
     "\n",
-    "LOG_PATH = '03_classify.log'\n",
-    "predictor.save_log(LOG_PATH)"
+    "# LOG_PATH = '03_classify.log'\n",
+    "# predictor.save_log(LOG_PATH)"
    ]
   }
  ],
