Save and load embedde pairs + ['paired']

--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -47,9 +47,10 @@
    "outputs": [],
    "source": [
     "DEBUG = True\n",
+    "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', 'embedded_protein_pairs.json')\n",
     "\n",
     "predictor = PairingPredictor(protein_pairs, DEBUG)\n",
-    "predictor.embed_pairs(DEBUG)\n",
+    "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
     "predictor.concatenate_embeddings()\n",
     "\n",
     "LOG_PATH = '03_classify.log'\n",
