json -> torch save + save concatenated

--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -48,10 +48,11 @@
    "source": [
     "DEBUG = True\n",
     "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', 'embedded_protein_pairs.json')\n",
+    "V = os.path.join('..', 'data', 'interim', 'concatenated_embeddings.json')\n",
     "\n",
     "predictor = PairingPredictor(protein_pairs, DEBUG)\n",
     "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
-    "predictor.concatenate_embeddings()\n",
+    "predictor.concatenate_embeddings(CONCATENATED_EMBEDDINGS_PATH)\n",
     "\n",
     "LOG_PATH = '03_classify.log'\n",
     "predictor.save_log(LOG_PATH)"
