--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "DEBUG = True\n",
     "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', 'embedded_protein_pairs.json')\n",
-    "V = os.path.join('..', 'data', 'interim', 'concatenated_embeddings.json')\n",
+    "CONCATENATED_EMBEDDINGS_PATH = os.path.join('..', 'data', 'interim', 'concatenated_embeddings.json')\n",
     "\n",
     "predictor = PairingPredictor(protein_pairs, DEBUG)\n",
     "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
