--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "predictor = PairingPredictor(protein_pairs, DEBUG)\n",
     "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
-    "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH)\n",
+    "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
     "\n",
     "LOG_PATH = '03_classify.log'\n",
     "predictor.save_log(LOG_PATH)"
