--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -46,14 +46,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEBUG = True\n",
+    "DEBUG = False\n",
+    "if DEBUG:\n",
+    "    DEBUG_PATH = '03_classify_debug.txt'\n",
+    "else:\n",
+    "    DEBUG_PATH = None\n",
+    "LOG_PATH = '03_classify.log'\n",
     "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', '3_embedded_protein_pairs.pt')\n",
     "\n",
-    "predictor = PairingPredictor(protein_pairs, DEBUG)\n",
+    "predictor = PairingPredictor(protein_pairs, DEBUG_PATH, LOG_PATH)\n",
     "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
     "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
-    "\n",
-    "LOG_PATH = '03_classify.log'\n",
     "predictor.save_log(LOG_PATH)"
    ]
   }
