--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -48,10 +48,10 @@
    "source": [
     "DEBUG = False\n",
     "if DEBUG:\n",
-    "    DEBUG_PATH = '03_classify_debug.txt'\n",
+    "    DEBUG_PATH = os.path.join('..', 'logs', '03_debug.txt')\n",
     "else:\n",
     "    DEBUG_PATH = None\n",
-    "LOG_PATH = '03_classify.log'\n",
+    "LOG_PATH = os.path.join('..', 'logs', '03_classify.log')\n",
     "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', '3_embedded_protein_pairs.pt')\n",
     "\n",
     "predictor = PairingPredictor(protein_pairs, DEBUG_PATH, LOG_PATH)\n",
