removed save_log from 03

--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -56,8 +56,7 @@
     "\n",
     "predictor = PairingPredictor(protein_pairs, DEBUG_PATH, LOG_PATH)\n",
     "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
-    "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
-    "predictor.save_log(LOG_PATH)"
+    "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)"
    ]
   }
  ],
