Load data included in class

--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -26,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load dataset"
+    "## Parameters"
    ]
   },
   {
@@ -35,26 +42,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load 2_model_df.pkl\n",
+    "# Define path to input data\n",
     "INPUT_PATH = os.path.join('..', 'data', 'interim')\n",
-    "protein_pairs = pd.read_pickle(os.path.join(INPUT_PATH, '2_model_df.pkl'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "PROTEIN_PAIRS = os.path.join(INPUT_PATH, '2_model_df.pkl')\n",
+    "\n",
+    "# Define logs and intermediate output paths\n",
     "DEBUG = False\n",
     "if DEBUG:\n",
     "    DEBUG_PATH = os.path.join('..', 'logs', '03_debug.txt')\n",
     "else:\n",
     "    DEBUG_PATH = None\n",
     "LOG_PATH = os.path.join('..', 'logs', '03_classify.log')\n",
-    "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', '3_embedded_protein_pairs.pt')\n",
-    "\n",
-    "predictor = PairingPredictor(protein_pairs, DEBUG_PATH, LOG_PATH)\n",
+    "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', '3_embedded_protein_pairs.pt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = PairingPredictor(PROTEIN_PAIRS, DEBUG_PATH, LOG_PATH)\n",
     "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
     "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)"
    ]
