--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -47,13 +47,15 @@
     "PROTEIN_PAIRS = os.path.join(INPUT_PATH, '2_model_df.pkl')\n",
     "\n",
     "# Define logs and intermediate output paths\n",
-    "DEBUG = False\n",
+    "DEBUG = True\n",
     "if DEBUG:\n",
     "    DEBUG_PATH = os.path.join('..', 'logs', '03_debug.txt')\n",
     "else:\n",
     "    DEBUG_PATH = None\n",
     "LOG_PATH = os.path.join('..', 'logs', '03_classify.log')\n",
-    "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', '3_embedded_protein_pairs.pt')"
+    "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', '3_embedded_protein_pairs.pt')\n",
+    "\n",
+    "TRAIN = True"
    ]
   },
   {
@@ -69,9 +71,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor = PairingPredictor(PROTEIN_PAIRS, DEBUG_PATH, LOG_PATH)\n",
-    "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
-    "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)"
+    "predictor = Classifier(PROTEIN_PAIRS, DEBUG_PATH, LOG_PATH)\n",
+    "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH)\n",
+    "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH)\n",
+    "predictor.random_split()\n",
+    "predictor.classify(TRAIN)"
    ]
   }
  ],
