--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -26,7 +26,7 @@
     "# Import user defined libraries\n",
     "import sys\n",
     "sys.path.append(\"../src\")\n",
-    "from PairingPredictor import PairingPredictor"
+    "from PairingPredictor import Classifier"
    ]
   },
   {
