--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -55,7 +55,7 @@
     "LOG_PATH = os.path.join('..', 'logs', '03_classify.log')\n",
     "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', '3_embedded_protein_pairs.pt')\n",
     "\n",
-    "TRAIN = True"
+    "TRAIN = False"
    ]
   },
   {
