Debug = False, Train = True

--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -47,7 +47,7 @@
     "PROTEIN_PAIRS = os.path.join(INPUT_PATH, '2_model_df.pkl')\n",
     "\n",
     "# Define logs and intermediate output paths\n",
-    "DEBUG = True\n",
+    "DEBUG = False\n",
     "if DEBUG:\n",
     "    DEBUG_PATH = os.path.join('..', 'logs', '03_debug.txt')\n",
     "else:\n",
@@ -55,7 +55,7 @@
     "LOG_PATH = os.path.join('..', 'logs', '03_classify.log')\n",
     "EMBEDDED_PROTEIN_PAIRS_PATH = os.path.join('..', 'data', 'interim', '3_embedded_protein_pairs.pt')\n",
     "\n",
-    "TRAIN = False"
+    "TRAIN = True"
    ]
   },
   {
