--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -47,7 +47,7 @@
     "PROTEIN_PAIRS = os.path.join(INPUT_PATH, '2_model_df.pkl')\n",
     "\n",
     "# Define logs and intermediate output paths\n",
-    "DEBUG = False\n",
+    "DEBUG = True\n",
     "if DEBUG:\n",
     "    DEBUG_PATH = os.path.join('..', 'logs', '03_debug.txt')\n",
     "else:\n",
