--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -72,8 +72,8 @@
    "outputs": [],
    "source": [
     "predictor = Classifier(PROTEIN_PAIRS, DEBUG_PATH, LOG_PATH)\n",
-    "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH)\n",
-    "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH)\n",
+    "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
+    "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
     "predictor.random_split()\n",
     "predictor.classify(TRAIN)"
    ]
