--- a/notebooks/01_ingest_data.ipynb
+++ b/notebooks/01_ingest_data.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
        "(35416, 13)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,6 +1343,28 @@
    "source": [
     "display(basel_proteome.df.head())\n",
     "basel_proteome.df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Bas01', 'Bas02', 'Bas03', ..., 'Gp71', 'Gp71.1', 'Gp71.2'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List unique values in the bas column\n",
+    "basel_proteome.df['bas'].unique()"
    ]
   },
   {
@@ -1354,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1511,7 @@
        "(4403, 8)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,19 +1539,35 @@
     "if not os.path.exists(CLEAN_PATH):\n",
     "    os.makedirs(CLEAN_PATH)\n",
     "\n",
-    "# Save dataframes to csv\n",
-    "maffei.to_csv(os.path.join(CLEAN_PATH, '1_maffei.csv'), index=False)\n",
-    "receptors.to_csv(os.path.join(CLEAN_PATH, '1_receptors.csv'), index=False)\n",
-    "protein_NN.to_csv(os.path.join(CLEAN_PATH, '1_proteins.csv'), index=False)\n",
-    "basel_proteome.df.to_csv(os.path.join(CLEAN_PATH, '1_basel_proteome.csv'), index=False)\n",
-    "k12_proteome.df.to_csv(os.path.join(CLEAN_PATH, '1_k12_proteome.csv'), index=False)\n",
+    "# # Save dataframes to csv\n",
+    "# maffei.to_csv(os.path.join(CLEAN_PATH, '1_maffei.csv'), index=False)\n",
+    "# receptors.to_csv(os.path.join(CLEAN_PATH, '1_receptors.csv'), index=False)\n",
+    "# protein_NN.to_csv(os.path.join(CLEAN_PATH, '1_proteins.csv'), index=False)\n",
+    "# basel_proteome.df.to_csv(os.path.join(CLEAN_PATH, '1_basel_proteome.csv'), index=False)\n",
+    "# k12_proteome.df.to_csv(os.path.join(CLEAN_PATH, '1_k12_proteome.csv'), index=False)\n",
     "\n",
     "# Save dataframes to pickle\n",
     "maffei.to_pickle(os.path.join(CLEAN_PATH, '1_maffei.pkl'))\n",
     "receptors.to_pickle(os.path.join(CLEAN_PATH, '1_receptors.pkl'))\n",
     "protein_NN.to_pickle(os.path.join(CLEAN_PATH, '1_proteins.pkl'))\n",
     "basel_proteome.df.to_pickle(os.path.join(CLEAN_PATH, '1_basel_proteome.pkl'))\n",
-    "k12_proteome.df.to_pickle(os.path.join(CLEAN_PATH, '1_k12_proteome.pkl'))"
+    "k12_proteome.df.to_pickle(os.path.join(CLEAN_PATH, '1_k12_proteome.pkl'))\n",
+    "\n",
+    "# # Save dataframes to different xlsx files\n",
+    "# with pd.ExcelWriter(os.path.join(CLEAN_PATH, '1_maffei.xlsx')) as writer:\n",
+    "#     maffei.to_excel(writer, sheet_name='maffei', index=False)\n",
+    "\n",
+    "# with pd.ExcelWriter(os.path.join(CLEAN_PATH, '1_receptors.xlsx')) as writer:\n",
+    "#     receptors.to_excel(writer, sheet_name='receptors', index=False)\n",
+    "\n",
+    "# with pd.ExcelWriter(os.path.join(CLEAN_PATH, '1_proteins.xlsx')) as writer:\n",
+    "#     protein_NN.to_excel(writer, sheet_name='proteins', index=False)\n",
+    "\n",
+    "# with pd.ExcelWriter(os.path.join(CLEAN_PATH, '1_basel_proteome.xlsx')) as writer:\n",
+    "#     basel_proteome.df.to_excel(writer, sheet_name='basel_proteome', index=False)\n",
+    "\n",
+    "# with pd.ExcelWriter(os.path.join(CLEAN_PATH, '1_k12_proteome.xlsx')) as writer:\n",
+    "#     k12_proteome.df.to_excel(writer, sheet_name='k12_proteome', index=False)"
    ]
   }
  ],
