--- a/notebooks/02_regex_transform_data.ipynb
+++ b/notebooks/02_regex_transform_data.ipynb
@@ -1986,9 +1986,9 @@
     "# Display in descending order\n",
     "RBPs_count.sort_values(by=['bas'], ascending=True, inplace=True)\n",
     "\n",
-    "# Save as xlsx\n",
-    "RBPs_count.to_excel(os.path.join(CLEAN_PATH, '2_RBPs_count.xlsx'), index=True)\n",
-    "display(RBPs_count)\n",
+    "# # Save as xlsx\n",
+    "# RBPs_count.to_excel(os.path.join(CLEAN_PATH, '2_RBPs_count.xlsx'), index=True)\n",
+    "# display(RBPs_count)\n",
     "\n",
     "# Plot the distribution of RBPs per bas\n",
     "plt.figure(figsize=(12, 6))\n",
