--- a/notebooks/02_regex_transform_data.ipynb
+++ b/notebooks/02_regex_transform_data.ipynb
@@ -2794,7 +2794,10 @@
     "    - Tail fibers with any protein that is not a receptor (tail_other)\n",
     "\n",
     "A big number of protein pairs can be obtained from all the possible combinations. However, a big number of negative samples against a small number of positive samples can lead to a class imbalance problem. \\\n",
-    "We will therefore include the same number of samples for each of the four categoires (including the proper pairs)."
+    "We will perform oversampling of positive samples before the classification. The oversampling will bring the positive samples to more or less the same number as the negative ones. \\\n",
+    "We want one third of the negative samples to be of each kind. \\\n",
+    "In other words, if we want a total of 2000 samples for the classification, half of them will be positive and half of them will be negative. \\\n",
+    "Of the negative samples, 1/3 will be of each kind, so 2000 / 6. \\"
    ]
   },
   {
@@ -2810,8 +2813,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define desired final dataset size\n",
+    "n_final_samples = 2000\n",
+    "n_neg_samples = int(n_final_samples / 6)\n",
     "# Concatenate side by side random entries from basel_proteome (others) and k12_proteome\n",
-    "n_neg_samples = len(protein_pairs)\n",
     "other_any = random_concatenation(basel_proteome[basel_proteome['seqID_phage'].isin(phage_set['others'])], k12_proteome, n_entries=n_neg_samples)\n",
     "\n",
     "# Add a column 'pair' with value 0\n",
