--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -75,7 +75,7 @@
     "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
     "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
     "predictor.random_split()\n",
-    "predictor.SMOTE() # Oversampling\n",
+    "predictor.ADASYN() # Oversampling\n",
     "predictor.classify(TRAIN)"
    ]
   }
