--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -76,7 +76,8 @@
     "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
     "predictor.random_split()\n",
     "predictor.ADASYN() # Oversampling\n",
-    "predictor.classify(TRAIN)"
+    "# predictor.classify(TRAIN)\n",
+    "predictor.grid_search()"
    ]
   }
  ],
