Load best model and use classify()

--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -77,7 +77,8 @@
     "predictor.random_split()\n",
     "predictor.ADASYN() # Oversampling\n",
     "# predictor.classify(TRAIN)\n",
-    "predictor.grid_search()"
+    "predictor.classify(load_model='models/grid_best.pkl')\n",
+    "# predictor.grid_search()"
    ]
   }
  ],
