--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -77,7 +77,7 @@
     "predictor.random_split()\n",
     "predictor.ADASYN() # Oversampling\n",
     "# predictor.classify(TRAIN)\n",
-    "predictor.classify(load_model='models/grid_best.pkl')\n",
+    "predictor.classify(load_model='grid_best.pkl')\n",
     "# predictor.grid_search()"
    ]
   }
