--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -77,8 +77,9 @@
     "predictor.random_split()\n",
     "predictor.ADASYN() # Oversampling\n",
     "# predictor.classify(TRAIN)\n",
-    "predictor.classify(load_model='grid_best.pkl')\n",
-    "# predictor.grid_search()"
+    "# predictor.grid_search(debug=True)\n",
+    "predictor.grid_search()\n",
+    "predictor.classify(load_model='grid_best.pkl')"
    ]
   }
  ],
