Post-float correction massive GRIDSEARCH

--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -76,10 +76,10 @@
     "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
     "predictor.random_split()\n",
     "predictor.ADASYN() # Oversampling\n",
-    "predictor.classify(TRAIN)\n",
+    "# predictor.classify(TRAIN)\n",
     "# predictor.grid_search(debug=True)\n",
-    "# predictor.grid_search()\n",
-    "# predictor.classify(load_model='grid_best.pkl')"
+    "predictor.grid_search()\n",
+    "predictor.classify(load_model='grid_best.pkl')"
    ]
   }
  ],
