--- a/notebooks/03_classify.ipynb
+++ b/notebooks/03_classify.ipynb
@@ -73,8 +73,8 @@
    "source": [
     "predictor = Classifier(PROTEIN_PAIRS, DEBUG_PATH, LOG_PATH)\n",
     "\n",
-    "# Use protXLNet\n",
-    "predictor.models_config['embedder'] = 'protxlnet'\n",
+    "# # Use protXLNet\n",
+    "# predictor.models_config['embedder'] = 'protxlnet'\n",
     "\n",
     "predictor.embed_pairs(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
     "predictor.concatenate_embeddings(EMBEDDED_PROTEIN_PAIRS_PATH, DEBUG)\n",
